2004-11-07 Michael Thomas <wart@kobold.org>
        * config/tcl.m4:  Add the value that was passed to the --libdir
          configure switch to the search path for tclConfig.sh

2004-10-22 Colin McCormack <colin@sharedtech.dyndns.org>
	* lib/*.tcl: added braces around all [if] conditionals - for speed
	* lib/{doc,template}.tcl: removed redundant prefix arg from Template_Try

2004-10-19 Colin McCormack <colin@sharedtech.dyndns.org>
	* session.tcl: Added SessionFetch and SessionDiscard to get and clean up
	old session persistent state,
	* session.tcl: Use Httpd_*Cookie commands to avoid races

2004-09-05 Colin McCormack <colin@sharedtech.dyndns.org>
	* session.tcl: fixed error in Session_Value and Session_Variable,
	fixed error in session saving for values with \n

2004-09-13 Brent Welch <welch@panasas.com>
        * removed htdocs/cgi-bin/env, which was a sparc executable.

2004-09-05 Colin McCormack <colin@sharedtech.dyndns.org>
	* lib/*.tcl, lib/MakeIndex: added explicit package requires
	to each component for each required component.

2004-08-23 Colin McCormack <colin@sharedtech.dyndns.org>
	* lib/digest.tcl: force md5 calculations to be lower case hex
	As the spec requires.

2004-08-23 Colin McCormack <colin@sharedtech.dyndns.org>
	* lib/{cgi,http}.tcl: Changed name of HttpDate to Http_Date
	in conformance with naming policy, since cgi.tcl was using it.

2004-08-16 Brent Welch <welch@panasas.com>
        * lib/url.tcl: check for URL requests that don't begin with /.
          Browsers won't generate these, but attacks on the server might try
          to feed it bogus URLs.  The following request was generating an
          "unknown variable suffix" server internal error.
              GET foo HTTP/1.0

2004-08-07 Brent Welch <welch@panasas.com>
        * certs/README.ssl: updated with notes taken while generating
          certificates with openssl-0.9.7d
        * lib/srvui.tcl: expose webmaster and debug passwords in the UI